<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- app-->
    <string name="app_name">Crier</string>
    <string name="app_description">Event Announcer</string>
    <string name="app_version">1.0</string>
    <string name="main_name">Crier</string>
    <string name="trainer_name">Speech Trainer</string>
 
   <!-- main -->
   <string name="preferences_title">Crier Settings</string>

   <string name="title_enabled">Enabled</string>
   <string name="summary_enabled">Master switch for crier announcements</string>

   <string name="title_phone_enabled">Announce Phone Calls</string>
   <string name="summary_phone_enabled">Announce incomming phone calls</string>

   <string name="title_phone_format">Phone Call Announcement</string>
   <string name="phone_format_default">Incoming call from, %s</string>
   <string name="summary_phone_format">Announcement for incoming phone calls</string>
   <string name="dialog_phone_format">Phone Call Announcement</string>
   
   <string name="title_text_enabled">Announce Text Messaged</string>
   <string name="summary_text_enabled">Announce incomming text messages</string>

   <string name="title_text_format">Text Message Announcement</string>
   <string name="text_format_default">Incoming text message from, %s</string>
   <string name="summary_text_format">Announcement for incoming text messages</string>
   <string name="dialog_text_format">Text Call Announcement</string>
  
   <string name="title_time_enabled">Announce Time</string>   
   <string name="summary_time_enabled">Announce time at the top and bottom of the hour</string>
   
   <string name="title_time_format">Time Announcement</string>
   <string name="time_format_default">The time is now, %s</string>
   <string name="summary_time_format">Announcement to play at the top and bottom of the hour</string>
   <string name="dialog_time_format">Time Announcement</string>

   <string name="title_time_flags">Times to Announce</string>
   <string name="summary_time_flags">Pick which times you want announced</string>
   <string name="dialog_time_flags">Times to Announcement</string>

   <!-- trainer -->
   <string name="trainer_button_add">Add a new Phrase</string>

   <string name="dialog_phrase_title">What Phrase Was Recorded?</string>
   <string name="dialog_phrase_ok">Add Phrase</string>
   <string name="dialog_phrase_cancel">Cancel</string>

   <!-- menu -->
   <string name="option_speech_trainer">Speech Trainer</string>
   <string name="option_about">About</string>

   <!-- about -->

   <string name="about_title">About Crier</string>
   <string name="about_ok">OK</string>
   
   <string name="about_text">
     Crier is a simple utility to announce events via the Eyes-free
     project's Text-to-Speech (TTS) library.  Curently supported events
     are incoming phone calls and text messages as well as the top and
     bottom of the hour.  Crier is written by Marc DellaVolpe(marc.dellavolpe@gmail.com)
   </string>

   <!-- time_picker -->
   <string name="time_top">:00</string>
   <string name="time_bottom">:30</string>
   <string name="time_00">12a</string>
   <string name="time_01">1a</string>
   <string name="time_02">2a</string>
   <string name="time_03">3a</string>
   <string name="time_04">4a</string>
   <string name="time_05">5a</string>
   <string name="time_06">6a</string>
   <string name="time_07">7a</string>
   <string name="time_08">8a</string>
   <string name="time_09">9a</string>
   <string name="time_10">10a</string>
   <string name="time_11">11a</string>
   <string name="time_12">12p</string>
   <string name="time_13">1p</string>
   <string name="time_14">2p</string>
   <string name="time_15">3p</string>
   <string name="time_16">4p</string>
   <string name="time_17">5p</string>
   <string name="time_18">6p</string>
   <string name="time_19">7p</string>
   <string name="time_20">8p</string>
   <string name="time_21">9p</string>
   <string name="time_22">10p</string>
   <string name="time_23">11p</string>
</resources>
